crates/store/re_arrow_combinators/tests/snapshots/transform__replace_nulls.snap
---
source: crates/store/re_arrow_combinators/tests/transform.rs
expression: "format!(\"{}\", DisplayRB(result.clone()))"
---
┌────────────────────────────────────────────┐
│ col                                        │
│ ---                                        │
│ type: nullable List[FixedSizeList[f64; 2]] │
╞════════════════════════════════════════════╡
│ [[0.0, 0.0], [42.0, 42.0]]                 │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ []                                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ null                                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[7.0, 1337.0], [7.0, 7.0]]                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[17.0, 17.0]]                             │
└────────────────────────────────────────────┘
