crates/store/re_arrow_combinators/tests/snapshots/transform__row_major_to_col_major.snap
---
source: crates/store/re_arrow_combinators/tests/transform.rs
expression: "format!(\"{}\", DisplayRB(result.clone()))"
---
┌──────────────────────────────────────────────────┐
│ col                                              │
│ ---                                              │
│ type: nullable FixedSizeList[nullable i32; 12]   │
╞══════════════════════════════════════════════════╡
│ [1, 4, 7, 10, null, 5, 8, 11, 3, 6, null, 12]    │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ null                                             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [13, 16, 19, 22, 14, 17, 20, 23, 15, 18, 21, 24] │
└──────────────────────────────────────────────────┘
